--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <h1>Calculator</h1>
     <div class="calculator">
         <h2>Arithmetic Operations</h2>
         <input type="number" id="num1" placeholder="Enter first number">
